--- a/01_env.yml
+++ b/01_env.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata: 
-    - name: nginx
+  name: nginx
 spec:
    containers:
       - name: nginx
-        image: ngnix.1.14.2
+        image: ngnix:1.14.2
         env: 
           - name: projet_name
             value: projeck
