--- a/01_env.yml
+++ b/01_env.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: python
 spec:
   containers:
-  - name: nginx
-    image: nginx:1.14.2
+  - name: python
+    image: python
     env:
       - name: projet_name
         value: projeck
