--- a/01_env.yml
+++ b/01_env.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: python
+  name: centos
 spec:
   containers:
-  - name: python
-    image: python
+  - name: centos
+    image: centos
     env:
       - name: projet_name
-        value: projeck
+        value: projeck_centos
       - name: url
         value: www.google.com
