--- a/01_env.yml
+++ b/01_env.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: centos
-    image: centos
+    image: centos:7
     env:
       - name: projet_name
         value: projeck_centos
