--- a/01_env.yml
+++ b/01_env.yml
@@ -6,6 +6,7 @@ spec:
   containers:
   - name: centos
     image: centos:7
+    command: ["sleep","300"]
     env:
       - name: projet_name
         value: projeck_centos
