--- a/01_tomcat.yml
+++ b/01_tomcat.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: tomcat
+  name: alpine
 spec:
   containers:
-  - name: tomcat
-    image: tomcat:latest
+  - name: alpnie
+    image: alpine
     command: ["sleep","300"]
     envFrom:
       - configMapRef:
