--- a/01-secret.yml
+++ b/01-secret.yml
@@ -1,9 +1,22 @@
+
 apiVersion: v1
-kind: Secert
+kind: Pod
 metadata:
-  name: config
+  name: sec_mon
+spec:
+  containers:
+    - name: mongodb
+      image: mongod
+      command: ["sleep","300"]
+      envFrom:
+      - configMapRef:
+           name: config_sec
+     
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: config_sec
 data:
-  project: projet_name
-  pro_name: projeck_python
-  name_url: url
+  name_url: google
   url_value: www.google.com
