--- a/01-secret.yml
+++ b/01-secret.yml
@@ -10,13 +10,13 @@ spec:
       command: ["sleep","300"]
       envFrom:
       - configMapRef:
-           name: config_sec
+           name: configsec
      
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: config_sec
+  name: configsec
 data:
   name_url: google
   url_value: Z29vZ2xlCg==
