--- a/01-service.yml
+++ b/01-service.yml
@@ -17,7 +17,7 @@ metadata:
   name: payment
   labels:
     tiers: payment
-Spec:
+spec:
   selector:      
     tier: payment-mysql  #matchs with pod label
   ports:
