--- a/01-service.yml
+++ b/01-service.yml
@@ -16,7 +16,7 @@ kind: Service
 metadata:
   name: payment
   labels:
-    tiers: payment
+    tiers: payment-mysql
 spec:
   selector:      
     tier: payment-mysql  #matchs with pod label
